--- a/debian/rules
+++ b/debian/rules
@@ -8,5 +8,5 @@ override_dh_auto_build:
 	
 override_dh_auto_install:
 	dh_install include/CivetServer.h /usr/include/civetweb/
-	dh_install include/civetweb.h /usr/inclide/civetweb/
+	dh_install include/civetweb.h /usr/include/civetweb/
 	dh_install libcivetweb.so /usr/lib/
